--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./avatar.png" alt="avatar" class="header__avatar" />
+      <img src="./maxresdefault.jpg" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Башлыков Юрий</h1>
       <h3 class="header__subtitle">вроде бы...</h3>
     </header>
