--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
         <ul class="links__container">
           <li class="links__link">
             <p class="links__title">Телеграм</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022">@Avdotyy</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">@Avdotyy</a>
           </li>
           <li class="links__link">
             <p class="links__title">Эл. почта</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022"
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969"
               >yura.bash@ya.ru</a
             >
           </li>
           <li class="links__link">
             <p class="links__title">Книгалицо</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022"
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969"
               >yura.bash</a
             >
           </li>
           <li class="links__link">
             <p class="links__title">Паду пибу</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022">Yury Jmury</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Yury Jmury</a>
           </li>
           <li class="links__link">
             <p class="links__title">Гит</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022">github.com/Avdotyy/</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">github.com/Avdotyy/</a>
           </li>
         </ul>
       </section>
@@ -51,25 +51,25 @@
         <ul class="links__container">
           <li class="links__link">
             <p class="links__title">Укладываю плитку</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022">besttiles.ru</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">besttiles.ru</a>
           </li>
           <li class="links__link">
             <p class="links__title">Фотографирую</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022">Люди в кадре</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Люди в кадре</a>
           </li>
           <li class="links__link">
             <p class="links__title">Преподаю</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022">Детская школа искусств</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Детская школа искусств</a>
           </li>
           <li class="links__link">
             <p class="links__title">Собираю</p>
-            <a class="linsk__link" href="https://vk.com/video-127960182_456239022">одуванчики</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">одуванчики</a>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href="https://vk.com/video-127960182_456239022"> Мои мысли </button>
+      <button type = "button" class="button-link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969"> Мои мысли </button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
