--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
           <li class="links__link">
             <p class="links__title">Собираю</p>
-            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">одуванчики</a>
+            <a class="linsk__link" href="https://ir.ozone.ru/s3/multimedia-n/c1000/6672405659.jpg">одуванчики</a>
           </li>
         </ul>
       </section>
