--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <img src="./maxresdefault.jpg" alt="avatar" class="header__avatar" />
-      <h1 class="header__title">Башлыков Юрий</h1>
+      <h1 class="header__title">Шатилова Катя</h1>
       <h3 class="header__subtitle">вроде бы...</h3>
     </header>
     <main>
@@ -33,12 +33,12 @@
           <li class="links__link">
             <p class="links__title">Книгалицо</p>
             <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969"
-              >yura.bash</a
+              >@katya</a
             >
           </li>
           <li class="links__link">
             <p class="links__title">Паду пибу</p>
-            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Yury Jmury</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Katya_Shaa</a>
           </li>
           <li class="links__link">
             <p class="links__title">Гит</p>
@@ -58,8 +58,8 @@
             <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Люди в кадре</a>
           </li>
           <li class="links__link">
-            <p class="links__title">Преподаю</p>
-            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Детская школа искусств</a>
+            <p class="links__title">Работаю</p>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">Много умных людей</a>
           </li>
           <li class="links__link">
             <p class="links__title">Собираю</p>
@@ -69,7 +69,7 @@
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969"> Мои мысли </button>
+      <button type = "button" class="button-link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969"> Мои мысли (там пусто) </button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
