--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="links__link">
             <p class="links__title">Эл. почта</p>
             <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969"
-              >yura.bash@ya.ru</a
+              >katya.shaa@ya.ru</a
             >
           </li>
           <li class="links__link">
