--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="links__container">
           <li class="links__link">
             <p class="links__title">Телеграм</p>
-            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">@Avdotyy</a>
+            <a class="linsk__link" href="https://www.tiktok.com/@.cat_jumping/video/7029606240418417922?q=rickroll&t=1726511003969">@Katooooook</a>
           </li>
           <li class="links__link">
             <p class="links__title">Эл. почта</p>
